[package]
name = "ucomment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11", features = ["json","blocking"] }
scraper = "0.14.0"
serde_json = "1.0.91"
futures = "0.3" # for our async / await blocks
tokio = { version = "1.12.0", features = ["full"] }
async-recursion = "1.0.2"
csv = "1.2.1"

[profile.release]

opt-level = 3
debug = false
lto = true
panic = "abort"
codegen-units = 1
incremental = false